y.output

state 0
	$accept: .root $end 

	INTEGER  shift 19
	FLOAT  shift 20
	DURATION  shift 21
	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 9
	COUNT  shift 23
	AVG  shift 26
	MAX  shift 24
	MIN  shift 25
	SUM  shift 27
	BY  shift 14
	SELECT  shift 15
	SUB  shift 22
	.  error

	root  goto 1
	groupOperation  goto 7
	selectOperation  goto 8
	spansetExpression  goto 5
	spansetPipelineExpression  goto 3
	wrappedSpansetPipeline  goto 10
	spansetPipeline  goto 2
	spansetFilter  goto 12
	scalarFilter  goto 6
	scalarPipelineExpressionFilter  goto 4
	scalarPipelineExpression  goto 11
	scalarExpression  goto 13
	wrappedScalarPipeline  goto 16
	aggregate  goto 18

state 1
	$accept:  root.$end 
	root:  root.hints 

	$end  accept
	WITH  shift 29
	.  error

	hints  goto 28

state 2
	root:  spansetPipeline.    (1)
	root:  spansetPipeline.PIPE metricsAggregation 
	root:  spansetPipeline.PIPE metricsAggregation metricsSecondStagePipeline 
	spansetPipeline:  spansetPipeline.PIPE spansetExpression 
	spansetPipeline:  spansetPipeline.PIPE scalarFilter 
	spansetPipeline:  spansetPipeline.PIPE groupOperation 
	spansetPipeline:  spansetPipeline.PIPE coalesceOperation 
	spansetPipeline:  spansetPipeline.PIPE selectOperation 

	PIPE  shift 30
	.  reduce 1 (src line 129)


state 3
	root:  spansetPipelineExpression.    (2)
	spansetPipelineExpression:  spansetPipelineExpression.AND spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.GT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.LT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.DESC spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.ANCE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.OR spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.SIBL spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_CHILD spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_PARENT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_DESC spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_ANCE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NRE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_CHILD spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_PARENT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_DESC spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_ANCE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_SIBL spansetPipelineExpression 

	AND  shift 31
	OR  shift 36
	LT  shift 33
	GT  shift 32
	NRE  shift 42
	DESC  shift 34
	ANCE  shift 35
	SIBL  shift 37
	NOT_CHILD  shift 38
	NOT_PARENT  shift 39
	NOT_DESC  shift 40
	NOT_ANCE  shift 41
	UNION_CHILD  shift 43
	UNION_PARENT  shift 44
	UNION_DESC  shift 45
	UNION_ANCE  shift 46
	UNION_SIBL  shift 47
	.  reduce 2 (src line 131)


state 4
	root:  scalarPipelineExpressionFilter.    (3)

	.  reduce 3 (src line 132)


state 5
	spansetPipeline:  spansetExpression.    (27)
	spansetExpression:  spansetExpression.AND spansetExpression 
	spansetExpression:  spansetExpression.GT spansetExpression 
	spansetExpression:  spansetExpression.LT spansetExpression 
	spansetExpression:  spansetExpression.DESC spansetExpression 
	spansetExpression:  spansetExpression.ANCE spansetExpression 
	spansetExpression:  spansetExpression.OR spansetExpression 
	spansetExpression:  spansetExpression.SIBL spansetExpression 
	spansetExpression:  spansetExpression.NOT_CHILD spansetExpression 
	spansetExpression:  spansetExpression.NOT_PARENT spansetExpression 
	spansetExpression:  spansetExpression.NRE spansetExpression 
	spansetExpression:  spansetExpression.NOT_ANCE spansetExpression 
	spansetExpression:  spansetExpression.NOT_DESC spansetExpression 
	spansetExpression:  spansetExpression.UNION_CHILD spansetExpression 
	spansetExpression:  spansetExpression.UNION_PARENT spansetExpression 
	spansetExpression:  spansetExpression.UNION_SIBL spansetExpression 
	spansetExpression:  spansetExpression.UNION_ANCE spansetExpression 
	spansetExpression:  spansetExpression.UNION_DESC spansetExpression 

	AND  shift 48
	OR  shift 53
	LT  shift 50
	GT  shift 49
	NRE  shift 57
	DESC  shift 51
	ANCE  shift 52
	SIBL  shift 54
	NOT_CHILD  shift 55
	NOT_PARENT  shift 56
	NOT_DESC  shift 59
	NOT_ANCE  shift 58
	UNION_CHILD  shift 60
	UNION_PARENT  shift 61
	UNION_DESC  shift 64
	UNION_ANCE  shift 63
	UNION_SIBL  shift 62
	.  reduce 27 (src line 166)


state 6
	spansetPipeline:  scalarFilter.    (28)

	.  reduce 28 (src line 168)


state 7
	spansetPipeline:  groupOperation.    (29)

	.  reduce 29 (src line 169)


state 8
	spansetPipeline:  selectOperation.    (30)

	.  reduce 30 (src line 170)


state 9
	spansetPipelineExpression:  OPEN_PARENS.spansetPipelineExpression CLOSE_PARENS 
	wrappedSpansetPipeline:  OPEN_PARENS.spansetPipeline CLOSE_PARENS 
	spansetExpression:  OPEN_PARENS.spansetExpression CLOSE_PARENS 
	scalarPipelineExpression:  OPEN_PARENS.scalarPipelineExpression CLOSE_PARENS 
	wrappedScalarPipeline:  OPEN_PARENS.scalarPipeline CLOSE_PARENS 
	scalarExpression:  OPEN_PARENS.scalarExpression CLOSE_PARENS 

	INTEGER  shift 19
	FLOAT  shift 20
	DURATION  shift 21
	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 9
	COUNT  shift 23
	AVG  shift 26
	MAX  shift 24
	MIN  shift 25
	SUM  shift 27
	BY  shift 14
	SELECT  shift 15
	SUB  shift 22
	.  error

	groupOperation  goto 7
	selectOperation  goto 8
	spansetExpression  goto 67
	spansetPipelineExpression  goto 65
	wrappedSpansetPipeline  goto 10
	spansetPipeline  goto 66
	spansetFilter  goto 12
	scalarFilter  goto 6
	scalarPipelineExpression  goto 68
	scalarExpression  goto 70
	wrappedScalarPipeline  goto 16
	scalarPipeline  goto 69
	aggregate  goto 18

state 10
	spansetPipelineExpression:  wrappedSpansetPipeline.    (25)

	.  reduce 25 (src line 160)


state 11
	scalarPipelineExpressionFilter:  scalarPipelineExpression.scalarFilterOperation scalarPipelineExpression 
	scalarPipelineExpressionFilter:  scalarPipelineExpression.scalarFilterOperation static 
	scalarPipelineExpression:  scalarPipelineExpression.ADD scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.SUB scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.MUL scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.DIV scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.MOD scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.POW scalarPipelineExpression 

	EQ  shift 78
	NEQ  shift 79
	LT  shift 80
	LTE  shift 81
	GT  shift 82
	GTE  shift 83
	ADD  shift 72
	SUB  shift 73
	MUL  shift 74
	DIV  shift 75
	MOD  shift 76
	POW  shift 77
	.  error

	scalarFilterOperation  goto 71

state 12
	spansetExpression:  spansetFilter.    (66)

	.  reduce 66 (src line 231)


state 13
	scalarFilter:  scalarExpression.scalarFilterOperation scalarExpression 
	scalarExpression:  scalarExpression.ADD scalarExpression 
	scalarExpression:  scalarExpression.SUB scalarExpression 
	scalarExpression:  scalarExpression.MUL scalarExpression 
	scalarExpression:  scalarExpression.DIV scalarExpression 
	scalarExpression:  scalarExpression.MOD scalarExpression 
	scalarExpression:  scalarExpression.POW scalarExpression 

	EQ  shift 78
	NEQ  shift 79
	LT  shift 80
	LTE  shift 81
	GT  shift 82
	GTE  shift 83
	ADD  shift 85
	SUB  shift 86
	MUL  shift 87
	DIV  shift 88
	MOD  shift 89
	POW  shift 90
	.  error

	scalarFilterOperation  goto 84

state 14
	groupOperation:  BY.OPEN_PARENS fieldExpression CLOSE_PARENS 

	OPEN_PARENS  shift 91
	.  error


state 15
	selectOperation:  SELECT.OPEN_PARENS attributeList CLOSE_PARENS 

	OPEN_PARENS  shift 92
	.  error


state 16
	scalarPipelineExpression:  wrappedScalarPipeline.    (85)

	.  reduce 85 (src line 268)


state 17
	spansetFilter:  OPEN_BRACE.CLOSE_BRACE 
	spansetFilter:  OPEN_BRACE.fieldExpression CLOSE_BRACE 

	IDENTIFIER  shift 120
	STRING  shift 105
	INTEGER  shift 106
	FLOAT  shift 107
	DURATION  shift 110
	DOT  shift 133
	CLOSE_BRACE  shift 93
	OPEN_PARENS  shift 95
	NIL  shift 96
	TRUE  shift 108
	FALSE  shift 109
	STATUS_ERROR  shift 112
	STATUS_OK  shift 111
	STATUS_UNSET  shift 113
	KIND_UNSPECIFIED  shift 114
	KIND_INTERNAL  shift 115
	KIND_SERVER  shift 116
	KIND_CLIENT  shift 117
	KIND_PRODUCER  shift 118
	KIND_CONSUMER  shift 119
	IDURATION  shift 121
	NAME  shift 122
	STATUS  shift 123
	STATUS_MESSAGE  shift 124
	PARENT  shift 126
	KIND  shift 125
	ROOTNAME  shift 127
	ROOTSERVICENAME  shift 128
	TRACEDURATION  shift 129
	NESTEDSETLEFT  shift 130
	NESTEDSETRIGHT  shift 131
	NESTEDSETPARENT  shift 132
	PARENT_DOT  shift 136
	RESOURCE_DOT  shift 134
	SPAN_DOT  shift 135
	TRACE_COLON  shift 140
	SPAN_COLON  shift 141
	EVENT_COLON  shift 142
	EVENT_DOT  shift 137
	LINK_COLON  shift 143
	LINK_DOT  shift 138
	INSTRUMENTATION_COLON  shift 144
	INSTRUMENTATION_DOT  shift 139
	VECTOR_AI  shift 103
	VECTOR_ALL  shift 104
	SUB  shift 97
	NOT  shift 98
	.  error

	fieldExpression  goto 94
	static  goto 99
	intrinsicField  goto 100
	attributeField  goto 101
	scopedIntrinsicField  goto 102

state 18
	scalarExpression:  aggregate.    (95)

	.  reduce 95 (src line 287)


state 19
	scalarExpression:  INTEGER.    (96)

	.  reduce 96 (src line 288)


state 20
	scalarExpression:  FLOAT.    (97)

	.  reduce 97 (src line 289)


state 21
	scalarExpression:  DURATION.    (98)

	.  reduce 98 (src line 290)


state 22
	scalarExpression:  SUB.INTEGER 
	scalarExpression:  SUB.FLOAT 
	scalarExpression:  SUB.DURATION 

	INTEGER  shift 145
	FLOAT  shift 146
	DURATION  shift 147
	.  error


state 23
	aggregate:  COUNT.OPEN_PARENS CLOSE_PARENS 

	OPEN_PARENS  shift 148
	.  error


state 24
	aggregate:  MAX.OPEN_PARENS fieldExpression CLOSE_PARENS 

	OPEN_PARENS  shift 149
	.  error


state 25
	aggregate:  MIN.OPEN_PARENS fieldExpression CLOSE_PARENS 

	OPEN_PARENS  shift 150
	.  error


state 26
	aggregate:  AVG.OPEN_PARENS fieldExpression CLOSE_PARENS 

	OPEN_PARENS  shift 151
	.  error


state 27
	aggregate:  SUM.OPEN_PARENS fieldExpression CLOSE_PARENS 

	OPEN_PARENS  shift 152
	.  error


state 28
	root:  root hints.    (6)

	.  reduce 6 (src line 135)


state 29
	hints:  WITH.OPEN_PARENS hintList CLOSE_PARENS 

	OPEN_PARENS  shift 153
	.  error


state 30
	root:  spansetPipeline PIPE.metricsAggregation 
	root:  spansetPipeline PIPE.metricsAggregation metricsSecondStagePipeline 
	spansetPipeline:  spansetPipeline PIPE.spansetExpression 
	spansetPipeline:  spansetPipeline PIPE.scalarFilter 
	spansetPipeline:  spansetPipeline PIPE.groupOperation 
	spansetPipeline:  spansetPipeline PIPE.coalesceOperation 
	spansetPipeline:  spansetPipeline PIPE.selectOperation 

	INTEGER  shift 19
	FLOAT  shift 20
	DURATION  shift 21
	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 169
	COUNT  shift 23
	AVG  shift 26
	MAX  shift 24
	MIN  shift 25
	SUM  shift 27
	BY  shift 14
	COALESCE  shift 170
	SELECT  shift 15
	RATE  shift 160
	COUNT_OVER_TIME  shift 161
	MIN_OVER_TIME  shift 162
	MAX_OVER_TIME  shift 163
	AVG_OVER_TIME  shift 165
	SUM_OVER_TIME  shift 164
	QUANTILE_OVER_TIME  shift 166
	HISTOGRAM_OVER_TIME  shift 167
	COMPARE  shift 168
	SUB  shift 22
	.  error

	groupOperation  goto 157
	coalesceOperation  goto 158
	selectOperation  goto 159
	spansetExpression  goto 155
	spansetFilter  goto 12
	scalarFilter  goto 156
	metricsAggregation  goto 154
	scalarExpression  goto 13
	aggregate  goto 18

state 31
	spansetPipelineExpression:  spansetPipelineExpression AND.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 171
	wrappedSpansetPipeline  goto 10

state 32
	spansetPipelineExpression:  spansetPipelineExpression GT.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 173
	wrappedSpansetPipeline  goto 10

state 33
	spansetPipelineExpression:  spansetPipelineExpression LT.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 174
	wrappedSpansetPipeline  goto 10

state 34
	spansetPipelineExpression:  spansetPipelineExpression DESC.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 175
	wrappedSpansetPipeline  goto 10

state 35
	spansetPipelineExpression:  spansetPipelineExpression ANCE.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 176
	wrappedSpansetPipeline  goto 10

state 36
	spansetPipelineExpression:  spansetPipelineExpression OR.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 177
	wrappedSpansetPipeline  goto 10

state 37
	spansetPipelineExpression:  spansetPipelineExpression SIBL.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 178
	wrappedSpansetPipeline  goto 10

state 38
	spansetPipelineExpression:  spansetPipelineExpression NOT_CHILD.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 179
	wrappedSpansetPipeline  goto 10

state 39
	spansetPipelineExpression:  spansetPipelineExpression NOT_PARENT.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 180
	wrappedSpansetPipeline  goto 10

state 40
	spansetPipelineExpression:  spansetPipelineExpression NOT_DESC.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 181
	wrappedSpansetPipeline  goto 10

state 41
	spansetPipelineExpression:  spansetPipelineExpression NOT_ANCE.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 182
	wrappedSpansetPipeline  goto 10

state 42
	spansetPipelineExpression:  spansetPipelineExpression NRE.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 183
	wrappedSpansetPipeline  goto 10

state 43
	spansetPipelineExpression:  spansetPipelineExpression UNION_CHILD.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 184
	wrappedSpansetPipeline  goto 10

state 44
	spansetPipelineExpression:  spansetPipelineExpression UNION_PARENT.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 185
	wrappedSpansetPipeline  goto 10

state 45
	spansetPipelineExpression:  spansetPipelineExpression UNION_DESC.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 186
	wrappedSpansetPipeline  goto 10

state 46
	spansetPipelineExpression:  spansetPipelineExpression UNION_ANCE.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 187
	wrappedSpansetPipeline  goto 10

state 47
	spansetPipelineExpression:  spansetPipelineExpression UNION_SIBL.spansetPipelineExpression 

	OPEN_PARENS  shift 172
	.  error

	spansetPipelineExpression  goto 188
	wrappedSpansetPipeline  goto 10

state 48
	spansetExpression:  spansetExpression AND.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 189
	spansetFilter  goto 12

state 49
	spansetExpression:  spansetExpression GT.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 191
	spansetFilter  goto 12

state 50
	spansetExpression:  spansetExpression LT.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 192
	spansetFilter  goto 12

state 51
	spansetExpression:  spansetExpression DESC.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 193
	spansetFilter  goto 12

state 52
	spansetExpression:  spansetExpression ANCE.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 194
	spansetFilter  goto 12

state 53
	spansetExpression:  spansetExpression OR.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 195
	spansetFilter  goto 12

state 54
	spansetExpression:  spansetExpression SIBL.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 196
	spansetFilter  goto 12

state 55
	spansetExpression:  spansetExpression NOT_CHILD.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 197
	spansetFilter  goto 12

state 56
	spansetExpression:  spansetExpression NOT_PARENT.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 198
	spansetFilter  goto 12

state 57
	spansetExpression:  spansetExpression NRE.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 199
	spansetFilter  goto 12

state 58
	spansetExpression:  spansetExpression NOT_ANCE.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 200
	spansetFilter  goto 12

state 59
	spansetExpression:  spansetExpression NOT_DESC.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 201
	spansetFilter  goto 12

state 60
	spansetExpression:  spansetExpression UNION_CHILD.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 202
	spansetFilter  goto 12

state 61
	spansetExpression:  spansetExpression UNION_PARENT.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 203
	spansetFilter  goto 12

state 62
	spansetExpression:  spansetExpression UNION_SIBL.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 204
	spansetFilter  goto 12

state 63
	spansetExpression:  spansetExpression UNION_ANCE.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 205
	spansetFilter  goto 12

state 64
	spansetExpression:  spansetExpression UNION_DESC.spansetExpression 

	OPEN_BRACE  shift 17
	OPEN_PARENS  shift 190
	.  error

	spansetExpression  goto 206
	spansetFilter  goto 12

state 65
	spansetPipelineExpression:  OPEN_PARENS spansetPipelineExpression.CLOSE_PARENS 
	spansetPipelineExpression:  spansetPipelineExpression.AND spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.GT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.LT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.DESC spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.ANCE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.OR spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.SIBL spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_CHILD spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_PARENT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_DESC spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NOT_ANCE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.NRE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_CHILD spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_PARENT spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_DESC spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_ANCE spansetPipelineExpression 
	spansetPipelineExpression:  spansetPipelineExpression.UNION_SIBL spansetPipelineExpression 

	CLOSE_PARENS  shift 207
	AND  shift 31
	OR  shift 36
	LT  shift 33
	GT  shift 32
	NRE  shift 42
	DESC  shift 34
	ANCE  shift 35
	SIBL  shift 37
	NOT_CHILD  shift 38
	NOT_PARENT  shift 39
	NOT_DESC  shift 40
	NOT_ANCE  shift 41
	UNION_CHILD  shift 43
	UNION_PARENT  shift 44
	UNION_DESC  shift 45
	UNION_ANCE  shift 46
	UNION_SIBL  shift 47
	.  error


state 66
	wrappedSpansetPipeline:  OPEN_PARENS spansetPipeline.CLOSE_PARENS 
	spansetPipeline:  spansetPipeline.PIPE spansetExpression 
	spansetPipeline:  spansetPipeline.PIPE scalarFilter 
	spansetPipeline:  spansetPipeline.PIPE groupOperation 
	spansetPipeline:  spansetPipeline.PIPE coalesceOperation 
	spansetPipeline:  spansetPipeline.PIPE selectOperation 
	scalarPipeline:  spansetPipeline.PIPE aggregate 

	CLOSE_PARENS  shift 208
	PIPE  shift 209
	.  error


67: shift/reduce conflict (shift 210(0), red'n 27(0)) on CLOSE_PARENS
state 67
	spansetPipeline:  spansetExpression.    (27)
	spansetExpression:  OPEN_PARENS spansetExpression.CLOSE_PARENS 
	spansetExpression:  spansetExpression.AND spansetExpression 
	spansetExpression:  spansetExpression.GT spansetExpression 
	spansetExpression:  spansetExpression.LT spansetExpression 
	spansetExpression:  spansetExpression.DESC spansetExpression 
	spansetExpression:  spansetExpression.ANCE spansetExpression 
	spansetExpression:  spansetExpression.OR spansetExpression 
	spansetExpression:  spansetExpression.SIBL spansetExpression 
	spansetExpression:  spansetExpression.NOT_CHILD spansetExpression 
	spansetExpression:  spansetExpression.NOT_PARENT spansetExpression 
	spansetExpression:  spansetExpression.NRE spansetExpression 
	spansetExpression:  spansetExpression.NOT_ANCE spansetExpression 
	spansetExpression:  spansetExpression.NOT_DESC spansetExpression 
	spansetExpression:  spansetExpression.UNION_CHILD spansetExpression 
	spansetExpression:  spansetExpression.UNION_PARENT spansetExpression 
	spansetExpression:  spansetExpression.UNION_SIBL spansetExpression 
	spansetExpression:  spansetExpression.UNION_ANCE spansetExpression 
	spansetExpression:  spansetExpression.UNION_DESC spansetExpression 

	CLOSE_PARENS  shift 210
	AND  shift 48
	OR  shift 53
	LT  shift 50
	GT  shift 49
	NRE  shift 57
	DESC  shift 51
	ANCE  shift 52
	SIBL  shift 54
	NOT_CHILD  shift 55
	NOT_PARENT  shift 56
	NOT_DESC  shift 59
	NOT_ANCE  shift 58
	UNION_CHILD  shift 60
	UNION_PARENT  shift 61
	UNION_DESC  shift 64
	UNION_ANCE  shift 63
	UNION_SIBL  shift 62
	.  reduce 27 (src line 166)


state 68
	scalarPipelineExpression:  OPEN_PARENS scalarPipelineExpression.CLOSE_PARENS 
	scalarPipelineExpression:  scalarPipelineExpression.ADD scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.SUB scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.MUL scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.DIV scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.MOD scalarPipelineExpression 
	scalarPipelineExpression:  scalarPipelineExpression.POW scalarPipelineExpression 

	CLOSE_PARENS  shift 211
	ADD  shift 72
	SUB  shift 73
	MUL  shift 74
	DIV  shift 75
	MOD  shift 76
	POW  shift 77
	.  error


state 69
	wrappedScalarPipeline:  OPEN_PARENS scalarPipeline.CLOSE_PARENS 

	CLOSE_PARENS  shift 212
	.  error


state 70
	scalarFilter:  scalarExpression.scalarFilterOperation scalarExpression 
	scalarExpression:  OPEN_PARENS scalarExpression.CLOSE_PARENS 
	scalarExpression:  scalarExpression.ADD scalarExpression 
	scalarExpression:  scalarExpression.SUB scalarExpression 
	scalarExpression:  scalarExpression.MUL scalarExpression 
	scalarExpression:  scalarExpression.DIV scalarExpression 
	scalarExpression:  scalarExpression.MOD scalarExpression 
	scalarExpression:  scalarExpression.POW scalarExpression 

	CLOSE_PARENS  shift 213
	EQ  shift 78
	NEQ  shift 79
	LT  shift 80
	LTE  shift 81
	GT  shift 82
	GTE  shift 83
	ADD  shift 85
	SUB  shift 86
	MUL  shift 87
	DIV  shift 88
	MOD  shift 89
	POW  shift 90
	.  error

	scalarFilterOperation  goto 84

state 71
	scalarPipelineExpressionFilter:  scalarPipelineExpression scalarFilterOperation.scalarPipelineExpression 
	scalarPipelineExpressionFilter:  scalarPipelineExpression scalarFilterOperation.static 

	IDENTIFIER  shift 120
	STRING  shift 105
	INTEGER  shift 106
	FLOAT  shift 107
	DURATION  shift 110
	OPEN_PARENS  shift 216
	TRUE  shift 108
	FALSE  shift 109
	STATUS_ERROR  shift 112
	STATUS_OK  shift 111
	STATUS_UNSET  shift 113
	KIND_UNSPECIFIED  shift 114
	KIND_INTERNAL  shift 115
	KIND_SERVER  shift 116
	KIND_CLIENT  shift 117
	KIND_PRODUCER  shift 118
	KIND_CONSUMER  shift 119
	.  error

	scalarPipelineExpression  goto 214
	wrappedScalarPipeline  goto 16
	static  goto 215

state 72
	scalarPipelineExpression:  scalarPipelineExpression ADD.scalarPipelineExpression 

	OPEN_PARENS  shift 216
	.  error

	scalarPipelineExpression  goto 217
	wrappedScalarPipeline  goto 16

state 73
	scalarPipelineExpression:  scalarPipelineExpression SUB.scalarPipelineExpression 

	OPEN_PARENS  shift 216
	.  error

	scalarPipelineExpression  goto 218
	wrappedScalarPipeline  goto 16

state 74
	scalarPipelineExpression:  scalarPipelineExpression MUL.scalarPipelineExpression 

	OPEN_PARENS  shift 216
	.  error

	scalarPipelineExpression  goto 219
	wrappedScalarPipeline  goto 16

state 75
	scalarPipelineExpression:  scalarPipelineExpression DIV.scalarPipelineExpression 

	OPEN_PARENS  shift 216
	.  error

	scalarPipelineExpression  goto 220
	wrappedScalarPipeline  goto 16

state 76
	scalarPipelineExpression:  scalarPipelineExpression MOD.scalarPipelineExpression 

	OPEN_PARENS  shift 216
	.  error

	scalarPipelineExpression  goto 221
	wrappedScalarPipeline  goto 16

state 77
	scalarPipelineExpression:  scalarPipelineExpression POW.scalarPipelineExpression 

	OPEN_PARENS  shift 216
	.  error

	scalarPipelineExpression  goto 222
	wrappedScalarPipeline  goto 16

state 78
	scalarFilterOperation:  EQ.    (70)

	.  reduce 70 (src line 243)


state 79
	scalarFilterOperation:  NEQ.    (71)

	.  reduce 71 (src line 245)


state 80
	scalarFilterOperation:  LT.    (72)

	.  reduce 72 (src line 246)


state 81
	scalarFilterOperation:  LTE.    (73)

	.  reduce 73 (src line 247)


state 82
	scalarFilterOperation:  GT.    (74)

	.  reduce 74 (src line 248)


state 83
	scalarFilterOperation:  GTE.    (75)

	.  reduce 75 (src line 249)


state 84
	scalarFilter:  scalarExpression scalarFilterOperation.scalarExpression 
